# lakecube

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  blueprint.md  testing-with-docker-essbase.md
examples/sample_basic/: README.md  cube.yaml
lakecube/: __init__.py
lakecube/app/: README.md
lakecube/cli/: __init__.py  main.py
lakecube/compiler/: __init__.py  compile.py
lakecube/emitters/: __init__.py  base.py  closure.py  lakebase.py  lakeflow.py  metric_view.py  scenarios.py  security.py
lakecube/excel/: README.md
lakecube/fn/: __init__.py  hierarchy.py
lakecube/importers/: __init__.py  calc.py  maxl.py  outline.py  rules.py
lakecube/spec/: __init__.py  schema.py
lakecube/xmla/: README.md
scripts/essbase/: export-data.msh  export-outline.msh  parity.sh
tests/: test_hierarchy_fn.py  test_importer_outline.py  test_importer_treemode.py  test_smoke.py
tests/fixtures/: Sample.Basic.treemode.xml  Sample.Basic.xml
